force-app/main/default/objects/Diagnostic_Test_Order__c/Diagnostic_Test_Order__c.object-meta.xml
<CustomObject>
    <label>Diagnostic Test Order</label>
    <nameField>
        <label>Order Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Diagnostic Test Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>