force-app/main/default/objects/Diagnostic_Test_Order__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Diagnostic Test Orders</relationshipLabel>
    <relationshipName>Diagnostic_Test_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>