force-app/main/default/objects/Diagnostic_Test_Order__c/fields/Insurance_Covered__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Covered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Insurance Covered</label>
    <type>Checkbox</type>
</CustomField>