force-app/main/default/objects/Diagnostic_Test_Order__c/fields/Lab_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Lab_Reference_Number__c</fullName>
    <label>Lab Reference Number</label>
    <type>Text</type>
    <length>50</length>
</CustomField>