force-app/main/default/objects/Diagnostic_Test_Order__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <label>Notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>