force-app/main/default/objects/Diagnostic_Test_Order__c/fields/Physician_Name__c.field-meta.xml
<CustomField>
    <fullName>Physician_Name__c</fullName>
    <label>Physician Name</label>
    <type>Text</type>
    <length>100</length>
</CustomField>