force-app/main/default/objects/Diagnostic_Test_Order__c/fields/Physician_Phone__c.field-meta.xml
<CustomField>
    <fullName>Physician_Phone__c</fullName>
    <label>Physician Phone</label>
    <type>Phone</type>
</CustomField>