force-app/main/default/objects/Diagnostic_Test_Order__c/fields/Requisition_Number__c.field-meta.xml
<CustomField>
    <fullName>Requisition_Number__c</fullName>
    <label>Requisition Number</label>
    <type>Text</type>
    <length>50</length>
</CustomField>