force-app/main/default/objects/Diagnostic_Test_Order__c/fields/Results_Date__c.field-meta.xml
<CustomField>
    <fullName>Results_Date__c</fullName>
    <label>Results Date</label>
    <type>Date</type>
</CustomField>