force-app/main/default/objects/Diagnostic_Test_Order__c/fields/Test_Name__c.field-meta.xml
<CustomField>
    <fullName>Test_Name__c</fullName>
    <label>Test Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Comprehensive Genomic Panel</fullName>
            </value>
            <value>
                <fullName>Hereditary Cancer Screen</fullName>
            </value>
            <value>
                <fullName>Cardiovascular Risk Assessment</fullName>
            </value>
            <value>
                <fullName>Pharmacogenomics Profile</fullName>
            </value>
            <value>
                <fullName>Prenatal Genetic Screen</fullName>
            </value>
            <value>
                <fullName>Metabolic Panel Plus</fullName>
            </value>
            <value>
                <fullName>Autoimmune Diagnostic Panel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>