force-app/main/default/objects/Diagnostic_Test_Order__c/fields/Test_Provider__c.field-meta.xml
<CustomField>
    <fullName>Test_Provider__c</fullName>
    <label>Test Provider</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Genomic Diagnostics Inc</fullName>
            </value>
            <value>
                <fullName>MediTest Laboratories</fullName>
            </value>
            <value>
                <fullName>Precision Health Analytics</fullName>
            </value>
            <value>
                <fullName>BioScreen Diagnostics</fullName>
            </value>
            <value>
                <fullName>Advanced Clinical Testing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>