force-app/main/default/objects/Diagnostic_Test_Order__c/fields/Test_Type__c.field-meta.xml
<CustomField>
    <fullName>Test_Type__c</fullName>
    <label>Test Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Genetic Testing</fullName>
            </value>
            <value>
                <fullName>Blood Panel</fullName>
            </value>
            <value>
                <fullName>Cancer Screening</fullName>
            </value>
            <value>
                <fullName>Infectious Disease</fullName>
            </value>
            <value>
                <fullName>Metabolic Panel</fullName>
            </value>
            <value>
                <fullName>Hormone Panel</fullName>
            </value>
            <value>
                <fullName>Allergy Testing</fullName>
            </value>
            <value>
                <fullName>Pharmacogenomics</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>