force-app/main/default/objects/Diagnostic_Test_Order__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Order_Number__c</columns>
    <columns>Status__c</columns>
    <columns>Test_Provider__c</columns>
    <columns>Test_Name__c</columns>
    <columns>Test_Type__c</columns>
    <columns>Order_Date__c</columns>
    <columns>Sample_Collection_Date__c</columns>
    <columns>Results_Date__c</columns>
    <columns>Priority__c</columns>
    <columns>Test_Result__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>